# YimASI

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: asmjit.cmake  gtav-classes.cmake
src/: AsiLoader.cpp  AsiLoader.hpp  Hijack.cpp  Hijack.hpp  common.cpp  common.hpp  exports.def  main.cpp
src/filemgr/: BaseObj.cpp  BaseObj.hpp  File.cpp  File.hpp  FileMgr.cpp  FileMgr.hpp  Folder.cpp  Folder.hpp
src/frontend/: GUI.cpp  GUI.hpp
src/frontend/menu/: Menu.cpp  Menu.hpp
src/game/: Crossmap.cpp  Crossmap.hpp
src/hooking/: BaseHook.cpp  BaseHook.hpp  DetourHook.hpp  Hooking.cpp  Hooking.hpp  IATHook.hpp  MinHook.hpp  VMTHook.hpp
src/hooks/: Hooks.hpp
src/hooks/Allocator/: SMPACreateStub.cpp
src/hooks/Anticheat/: QueueDependency.cpp
src/hooks/GUI/: SwapChain.cpp  Window.cpp
src/hooks/GameFiles/: ReadGameConfig.cpp
src/hooks/Pools/: CreatePool.cpp  GetPoolItem.cpp  GetPoolSize.cpp
src/hooks/Script/: KillThread.cpp  OnProgramLoad.cpp  ResetThread.cpp  ScriptVM.cpp
src/jit/: Context.cpp  Context.hpp  Function.cpp  Function.hpp  Header.hpp  Instruction.hpp  JIT.cpp  JIT.hpp  Natives.cpp  Natives.hpp  ScriptFile.cpp  ScriptFile.hpp  Utils.cpp  Utils.hpp
src/logger/: LogColor.hpp  LogHelper.cpp  LogHelper.hpp  LogSink.cpp  LogSink.hpp
src/memory/: BytePatch.cpp  BytePatch.hpp  Module.cpp  Module.hpp  ModuleMgr.cpp  ModuleMgr.hpp  Pattern.hpp  PatternScanner.cpp  PatternScanner.hpp  PointerCalculator.hpp
src/pointers/: Pointers.cpp  Pointers.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/util/: Joaat.cpp  Joaat.hpp  StrToHex.hpp
